# CSOPESY-MCO1

./: .gitignore  CMakeLists.txt  CMakePresets.json  MERGE_NOTES.txt  Makefile  README.md  README.txt  build-msvc.ps1
assets/: hachimi.txt
scripts/: build.bat  build.sh  compile.bash  run.bash  run.bat  run.sh
src/: CMakeLists.txt  contract.cpp  conversion.cpp  display.cpp  main.cpp  marquee.cpp  scanner.cpp
src/os_agnostic/: AnimationHandler.cpp  AudioHandler.cpp  CommandHandler.cpp  CommandHandler.hpp  Context.cpp  Context.hpp  DisplayHandler.cpp  DisplayHandler.hpp  FileReaderHandler.cpp  FileReaderHandler.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  Marquee.cpp  MarqueeConsole.cpp  MarqueeConsole.hpp
src/os_depedent/: ScannerLibrary.cpp
src/os_dependent/: Scanner.hpp  ScannerLibrary.cpp  Scanner_posix.cpp  Scanner_win32.cpp  SoundLibrary.cpp
